 - More generic escaping functions, supporting more types of binary.
 - In C++20, accept generic columns list for `stream_to`.  (#447)
 - Renamed `<pqxx/prepared_statement>` to `<pqxx/params>`.
 - Deprecated `dynamic_params` in favour of `params`.
 - `pqxx::params::append_multi()` now calls `reserve()` if possible.
 - `pqxx::params::size()` is now `noexcept` (but sadly, `ssize()` is not).
 - Helper for generating parameter placeholders `$1`, `$2`, etc.  ($443)
 - Now requires support for C++14 `[[deprecated]]` attribute.
7.5.2
 - **Actual serious bug.**  `blob::read(std::vector<...>)` was broken.
7.5.1
 - Fixed some Visual Studio warnings.
 - Missed a bit in working around MinGW's broken `<thread>`.
 - Deprecated more obsolete representations of binary data.  Use `std::byte`.
 - New script `tools/deprecations` lists files that use deprecated code.
 - Added automake-generated `config/compile` to revision control.
7.5.0
 - Now requires `std::variant` support!  No longer works with gcc7.
 - When implementing a string conversion, consider specialising `param_format`.
 - Stop "aborting" nontransaction on closing.  (#419)
 - Silence an overzealous Visual C++ warning.  (#418)
 - Starting support for C++20 `std::span`.
 - New `blob::read()` using `std::span`.  (#429)
 - New `params` class lets you build parameter lists incrementally.  (#387)
 - Pass `std::vector<std::byte>` params in binary format.
 - Dropped legacy tests 31 and 49 to work around clang C++20 bug.
 - Fixed `stream_to` test failure in non-English locales.  (#440)
 - Clarify `transaction_base::stream` documentation.  (#423)
 - Avoid `<thread>` on MinGW; it's broken there.  (#336, #398, #424, #441)
7.4.1
 - Missing includes; broke macOS clang build.  (#416)
7.4.0
 - Work around Visual Studio 2017 bug with `[[deprecated]]`.  (#405, #406)
 - Work around eternal Windows bug with `max` macro yet again.  (#101)
 - Prepare for C++20 `std::ssize()`.