@@ -359,9 +359,9 @@ void PQXX_LIBEXPORT
 unesc_bin(std::string_view escaped_data, std::byte buffer[]);
 
 
-// TODO: Return actual binary type.
 /// Reconstitute binary data from its escaped version.
-std::string PQXX_LIBEXPORT unesc_bin(std::string_view escaped_data);
+std::basic_string<std::byte>
+PQXX_LIBEXPORT unesc_bin(std::string_view escaped_data);
 
 
 /// Transitional: std::ssize(), or custom implementation if not available.
