@@ -12,8 +12,10 @@
  - Deprecated `dynamic_params` in favour of `params`.
  - `pqxx::params::append_multi()` now calls `reserve()` if possible.
  - `pqxx::params::size()` is now `noexcept` (but sadly, `ssize()` is not).
- - Helper for generating parameter placeholders `$1`, `$2`, etc.  ($443)
+ - Helper for generating parameter placeholders `$1`, `$2`, etc.  (#443)
  - Now requires support for C++14 `[[deprecated]]` attribute.
+ - Deprecated `unesc_raw()` with `unesc_bin()` variants.
+ - Once `unesc_raw()` is gone, we'll support only the hex escape format.
 7.5.2
  - **Actual serious bug.**  `blob::read(std::vector<...>)` was broken.
 7.5.1
